# hex-lint

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.beads/: config.yaml  issues.jsonl
.claude/: settings.json
.github/workflows/: ci.yml
src/: context.rs  context_check.rs  exceptions.rs  lint.rs  main.rs  remediation.rs  role.rs  role_check.rs  workspace.rs
tests/: context_isolation.rs  regression.rs
tests/common/: mod.rs
tests/fixtures/clean_contexts/: Cargo.toml
tests/fixtures/clean_contexts/contracts/: Cargo.toml
tests/fixtures/clean_contexts/pantry-domain/: Cargo.toml
tests/fixtures/clean_contexts/pantry-usecase/: Cargo.toml
tests/fixtures/context_exception_stale/: Cargo.toml  hex-lint-exceptions.toml
tests/fixtures/context_exception_suppresses/: Cargo.toml  hex-lint-exceptions.toml  role-exception.toml
tests/fixtures/cross_context/: Cargo.toml
tests/fixtures/cross_context/pantry-shell/: Cargo.toml
tests/fixtures/cross_context/shopping-reactor/: Cargo.toml
tests/fixtures/no_context/: Cargo.toml
tests/fixtures/no_context/app/: Cargo.toml
tests/fixtures/no_context/core/: Cargo.toml
tests/fixtures/no_context/domain/: Cargo.toml
tests/fixtures/no_context/ports/: Cargo.toml
tests/fixtures/partial_context/: Cargo.toml
tests/fixtures/partial_context/shopping-domain/: Cargo.toml
tests/fixtures/partial_context/shopping-domain/src/: lib.rs
tests/fixtures/partial_context/shopping-usecase/: Cargo.toml
tests/fixtures/partial_context/unlabeled/: Cargo.toml
tests/fixtures/shared_ok/: Cargo.toml
tests/fixtures/shared_ok/shopping-usecase/: Cargo.toml
tests/fixtures/shared_reaches_in/: Cargo.toml
tests/fixtures/shared_reaches_in/contracts/: Cargo.toml
tests/fixtures/shared_reaches_in/pantry-core/: Cargo.toml
tests/golden/: no_context.txt
