[package]
name = "hex-lint"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Workspace lint that enforces hexagonal-architecture role boundaries — and optional bounded-context isolation — via package.metadata.hex-arch."
license = "MIT OR Apache-2.0"
repository = "https://github.com/igouss/hex-lint"
keywords = ["hexagonal", "architecture", "lint", "workspace", "cargo"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[package.metadata.hex-arch]
role = "infra"

[[bin]]
name = "hex-lint"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
print_stderr = "allow"
print_stdout = "allow"
